Fix for Hive messagepane to allow clickable elements behind it's layer
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@4053 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/hive/css/textpattern.css
+++ b/textpattern/theme/hive/css/textpattern.css
@@ -264,14 +264,11 @@ a:hover .content-image {
 #messagepane {
   position: fixed;
   bottom: 0;
-  right: 0;
-  left: 0;
+  z-index: 20000;
   text-align: center;
 }
 
 span#message {
-  position: relative;
-  z-index: 20000;
   display: inline-block;
   *display: inline;
   *zoom: 1;
@@ -929,8 +926,6 @@ body {
 }
 
 .txp-body {
-  position: relative;
-  z-index: 1;
   max-width: 110em;
   margin: 0 auto;
 }
@@ -1141,11 +1136,6 @@ body {
 
 /* Footer
    ========================================================================== */
-.txp-footer {
-  position: relative;
-  z-index: 1;
-}
-
 .mothership {
   float: left;
 }
@@ -1538,7 +1528,6 @@ body#page-setup {
   height: 34.4615384615385em;
 }
 #article-main .author {
-  font-size: 0.84615em;
   color: #999999;
 }
 
